@@ -1,4 +1,4 @@
-/* $Id: miniupnpc.c,v 1.102 2012/01/21 13:56:41 nanard Exp $ */
+/* $Id: miniupnpc.c,v 1.104 2012/04/09 12:40:11 nanard Exp $ */
 /* Project : miniupnp
  * Web : http://miniupnp.free.fr/
  * Author : Thomas BERNARD
@@ -816,6 +816,7 @@ UPNPIGD_IsConnected(struct UPNPUrls * urls, struct IGDdatas * data)
 
 /* UPNP_GetValidIGD() :
  * return values :
+ *    -1 = Internal error
  *     0 = NO IGD found
  *     1 = A valid connected IGD has been found
  *     2 = A valid IGD has been found but it reported as
@@ -832,11 +833,14 @@ UPNP_GetValidIGD(struct UPNPDev * devlist,
 				 struct IGDdatas * data,
 				 char * lanaddr, int lanaddrlen)
 {
-	char * descXML;
-	int descXMLsize = 0;
+	struct xml_desc {
+		char * xml;
+		int size;
+	} * desc = NULL;
 	struct UPNPDev * dev;
 	int ndev = 0;
-	int state; /* state 1 : IGD connected. State 2 : IGD. State 3 : anything */
+	int i;
+	int state = -1; /* state 1 : IGD connected. State 2 : IGD. State 3 : anything */
 	if(!devlist)
 	{
 #ifdef DEBUG
@@ -844,22 +848,36 @@ UPNP_GetValidIGD(struct UPNPDev * devlist,
 #endif
 		return 0;
 	}
+	for(dev = devlist; dev; dev = dev->pNext)
+		ndev++;
+	if(ndev > 0)
+	{
+		desc = calloc(ndev, sizeof(struct xml_desc));
+		if(!desc)
+			return -1; /* memory allocation error */
+	}
 	for(state = 1; state <= 3; state++)
 	{
-		for(dev = devlist; dev; dev = dev->pNext)
+		for(dev = devlist, i = 0; dev; dev = dev->pNext, i++)
 		{
 			/* we should choose an internet gateway device.
 		 	* with st == urn:schemas-upnp-org:device:InternetGatewayDevice:1 */
-			descXML = miniwget_getaddr(dev->descURL, &descXMLsize,
-			   	                        lanaddr, lanaddrlen);
-			if(descXML)
+			if(state == 1)
 			{
-				ndev++;
+				desc[i].xml = miniwget_getaddr(dev->descURL, &(desc[i].size),
+				   	                           lanaddr, lanaddrlen);
+#ifdef DEBUG
+				if(!desc[i].xml)
+				{
+					printf("error getting XML description %s\n", dev->descURL);
+				}
+#endif
+			}
+			if(desc[i].xml)
+			{
 				memset(data, 0, sizeof(struct IGDdatas));
 				memset(urls, 0, sizeof(struct UPNPUrls));
-				parserootdesc(descXML, descXMLsize, data);
-				free(descXML);
-				descXML = NULL;
+				parserootdesc(desc[i].xml, desc[i].size, data);
 				if(0==strcmp(data->CIF.servicetype,
 				   "urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1")
 				   || state >= 3 )
@@ -872,7 +890,7 @@ UPNP_GetValidIGD(struct UPNPDev * devlist,
 			         UPNPIGD_IsConnected(urls, data));
 #endif
 				  if((state >= 2) || UPNPIGD_IsConnected(urls, data))
-					return state;
+					goto free_and_return;
 				  FreeUPNPUrls(urls);
 				  if(data->second.servicetype[0] != '\0') {
 #ifdef DEBUG
@@ -890,21 +908,18 @@ UPNP_GetValidIGD(struct UPNPDev * devlist,
 			           UPNPIGD_IsConnected(urls, data));
 #endif
 				    if((state >= 2) || UPNPIGD_IsConnected(urls, data))
-					  return state;
+					  goto free_and_return;
 				    FreeUPNPUrls(urls);
 				  }
 				}
 				memset(data, 0, sizeof(struct IGDdatas));
 			}
-#ifdef DEBUG
-			else
-			{
-				printf("error getting XML description %s\n", dev->descURL);
-			}
-#endif
 		}
 	}
-	return 0;
+	state = 0;
+free_and_return:
+	free(desc);
+	return state;
 }
 
 /* UPNP_GetIGDFromUrl()
